update readme file add test run output